# myMeterData

./: .env.example  .gitignore  CHANGELOG.md  HOME_ASSISTANT.md  LICENSE  README.md  debug_login_refresh.py  debug_statistics.py  debug_statistics_output.json  hacs.json  pyproject.toml  requirements.txt  test_refresh.py  utility_scraper.py
custom_components/utility_water/: __init__.py  config_flow.py  const.py  manifest.json  scraper.py  sensor.py  services.yaml
custom_components/utility_water/translations/: en.json
docs/: ENDPOINTS.md
scripts/: debug_login.py  scrape_usage.py
src/my_meter_data/: __init__.py  cli.py  scraper.py
